k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitcoind
  namespace: bitcoin-node
spec:
  selector:
    app: bitcoind
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 8332
      targetPort: 8332
    - protocol: TCP
      name: http
      port: 8333
      targetPort: 8333
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multi-port-egress
  namespace: bitcoin-node
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 8332
        - protocol: TCP
          port: 8333
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitcoind
  namespace: bitcoin-node
spec:
  serviceName: bitcoind
  replicas: 1
  selector:
    matchLabels:
      app: bitcoind
  template:
    metadata:
      labels:
        app: bitcoind
    spec:
      serviceAccountName: bitcoind
      restartPolicy: Always
      securityContext:
        readOnlyRootFilesystem: true
        runAsNonRoot: true

        # seccomp and apparmor additional security profiles to harden your kubernetes workloads https://kubernetes.io/docs/tutorials/security/apparmor/ https://kubernetes.io/docs/tutorials/security/seccomp/
        seccompProfile: 
          type: RuntimeDefault
        appArmorProfile:
          type: RuntimeDefault
      containers:
        - name: bitcoind
          image: bitoind:linux
          ports:
          - containerPort: 8334
          # liveness probe example from https://github.com/ompldr/kubernetes/blob/master/bitcoind-us-west1.yaml
          readinessProbe:
            tcpSocket:
              port: 8333
            initialDelaySeconds: 120
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8333
            initialDelaySeconds: 120
            periodSeconds: 5
          volumeMounts:
            - name: bitcoind
              mountPath: /root/.bitcoin
  volumeClaimTemplates:
    - metadata:
        name: bitcoind
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: default
        resources:
          requests:
            storage: 800Gi
